--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button id="btn1">Boutton 1</button>
         <button id="btn2">Boutton 2</button>
         <button id="btn3">Boutton 3</button>
+        <button id="btn3">Boutton 4</button>
       </div>
     </div>
 
