--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="./assets/img/stadium.png" alt="logo" id="logo" />
       
 
-      <div class="bouttons">
+      <div class="boutons">
         <button id="btn1">Boutton 1</button>
         <button id="btn2">Boutton 2</button>
         <button id="btn3">Boutton 3</button>
