Ajout_img_titre_pourChqBtn

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       
 
       <div class="boutons">
-        <button id="btn1">Boutton 1</button>
-        <button id="btn2">Boutton 2</button>
-        <button id="btn3">Boutton 3</button>
+        <button id="btn">Boutton 1</button>
+        <button id="btn">Boutton 2</button>
+        <button id="btn">Boutton 3</button>
       </div>
     </div>
 
