Modif_Assets_Nvx_Page_jeux

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="jeu">
-      <p class="titre">CHAMPION'S ROAD</p>
+      <p id="titre">CHAMPION'S ROAD</p>
 
       <p class="text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate
@@ -18,6 +18,7 @@
       </p>
       
       <img src="./assets/img/stadium.png" alt="logo" id="logo" />
+      <img src="./assets/img/repos.jpg" alt="logo" id="logo" />
       
 
       <div class="boutons">
@@ -27,6 +28,6 @@
       </div>
     </div>
 
-    <script src="java.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
