--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         blanditiis placeat sequi nesciunt sunt accusantium est dolorem
         repellendus accusamus maxime, laborum culpa quisquam!
       </p>
-      
-      <img src="./assets/img/stadium.png" alt="logo" id="logo" />
-      
+
+      <img src="" alt="logo" id="logo" />
 
       <div class="boutons">
         <button id="btn">Boutton 1</button>
