--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <meta name="author" content="Abdel Ali Djeral"> 
+    <meta name="author" content="Abdel Ali Djeral" />
   </head>
   <body>
     <div class="jeu">
@@ -18,13 +18,15 @@
         repellendus accusamus maxime, laborum culpa quisquam!
       </p>
 
-      <img src="" alt="logo" id="logo" />
+      <div id="media"></div>
 
       <div class="boutons">
         <button id="btn">Boutton 1</button>
         <button id="btn">Boutton 2</button>
         <button id="btn">Boutton 3</button>
       </div>
+
+      <button id="reset">Recommencer</button>
     </div>
 
     <script src="./assets/js/script.js"></script>
