--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button id="btn">Boutton 3</button>
       </div>
 
-      <button id="reset">Recommencer</button>
+      <button id="reset">Réinitialiser </button>
     </div>
 
     <script src="./assets/js/script.js"></script>
