--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       </div>
 
       <button id="reset">Réinitialiser </button>
+
+      <div class="mute">
+        <label for="muteCheckbox">Mute</label>
+        <input type="checkbox" id="muteCheckbox">
     </div>
 
     <script src="./assets/js/script.js"></script>
